styles.css
@keyframes arrow {
  0%   {padding-top: 20px;}
  50%  {padding-top: 40px;}
  100% {padding-top: 20px;}
}

@media only screen and (max-width: 1200px) {
  #profile, #projects, #skills, #experiences, #notoriety, #contact {
    padding-left:5% !important; 
    padding-right:5% !important;
  }

  .nav, #arrow {
    display: none !important;
  }

  nav.navbar {
    display: block !important;
    background-color: dimgray;
  }
}

#arrow {
  animation-name: arrow;
  animation-duration: 1.2s;
  animation-timing-function: ease;
  animation-iteration-count: infinite;
  position: absolute;
  left: 48.3%;
  top: 85%;
}

nav button {
  color: white;

}



.col-md, .col-md-4, .col-md-8 {
  min-width: 300px;
}

html {
  scroll-behavior: smooth;
}

span {
  -webkit-transition-duration: 1s;
    -moz-transition-duration: 1s;
    -o-transition-duration: 1s;
    transition-duration: 1s;
    -webkit-transition-property: -webkit-transform;
    -moz-transition-property: -moz-transform;
    -o-transition-property: -o-transform;
    transition-property: transform;
}

body {
  margin: 0px;
  position: relative;
  font-size: 15px;
  line-height: 1.64;
  font-family: 'Poppins', sans-serif;
}

ul {
  margin-top: 60px;
}
hr {
  margin-top: 30px;
  margin-bottom: 30px;
}

h1 {
  font-weight: 700;
  font-size: 4.4rem;
}

h2 {
  font-size: 50px;
  padding-top: 40px;
}

.active {
  background-color: #93C2BC;
}

h3.beg, h2 {
  color: #93C2BC;
}

h4 {
  font-weight: 400;
}

h5 {
  font-size: 2.25rem;
}

p {
  color: #727878;
  min-width: 450px;
}

li.top {
  padding: 0;
}

li {
  background-color: transparent;
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
  padding-bottom: 0px;
}

img {
  max-width: 300px;
}

a.diff {
  background-color: transparent;
  color: white;
  text-decoration: none;
  left: 50%;
}

li a {
  background-color: dimgray;
  margin-left: 5px;
  margin-right: 5px;
  text-align: center;
  font-weight: bold;
  color: white;
}

.row{
  padding: 10px;
}

.btn {
  background-color: transparent;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
  overflow: hidden;
  outline: none;
  color: #727878;
}

.btn span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.btn span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.btn:hover span {
  padding-right: 25px;
}

.btn:hover span:after {
  opacity: 1;
  right: 0;
}

.info {
  text-align: center;
}

.parallax {
  background-image: url("./photos/cover.png");
  height: 945px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  text-align: center;
  color: white;
  position: relative;
  font-size: 100px;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 54px;
}

#experiences, #skills {
  background-color:#FEF7F3;
}

#profile, #projects, #notoriety {
  background-color: #D9D5D2;
}

#contact {
  background-color: darkgray;
  padding-bottom: 600px;
}

#profile, #projects, #skills, #experiences, #notoriety, #contact {
  padding-right: 450px;
  padding-left: 450px;
}

